LDAP: Use valid values for error paths of contact create/remove
In the call to e_data_book_respond_remove_contacts()
from book_backend_ldap_modify_contacts()
the data of remove_op->op
and remove_op->op.book
are not initialized. It is nevertheless passed as first parameter to e_data_book_respond_remove_contacts()
and this function does read the value of its first parameter.