I#420 - LDAP: Use valid values for error paths of contact create/remove

Closes https://gitlab.gnome.org/GNOME/evolution-data-server/-/issues/420